# greenland-yomiage

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  docker-compose.yml
.gitea/workflows/: deploy.yaml  deploy.yml
.github/workflows/: docker-image.yml
app/: go.mod  go.sum
app/general/cmd/: main.go
app/general/internal/config/: config.go
app/general/internal/handler/: disconnect.go  handler.go  interaction.go  join.go  joinvc.go  leave.go  message_component.go  set_engine.go  set_voice.go  tts.go
app/general/internal/initialize/: external_dependencies.go  handler_props.go  usecases.go
app/internal/aivoice/: aivoice.go  dictionary.go  generate.go  speakers.go
app/internal/dave/: adapter.go
app/internal/ttsengine/: selector.go
app/internal/voicesettings/: settings.go
app/internal/voicevox/: dictionary.go  generate.go  speakers.go
app/internal/voicevox_core/: voicevoxcore.go
app/internal/wavgenerator/: service.go
src/: bootstrap.rs  config.rs  error.rs  lib.rs  main.rs
src/application/: add_word.rs  engine_registry.rs  filter_chain.rs  filters.rs  list_speakers.rs  mod.rs  rule_pipeline.rs  rules.rs  set_voice.rs  synthesize.rs
src/domain/: message_filter.rs  mod.rs  model.rs  text_rule.rs  tts.rs  voice_store.rs
src/infrastructure/: mod.rs
src/infrastructure/discord/: commands.rs  events.rs  message_flow.rs  mod.rs  playback.rs  voice_activity.rs  voice_pager.rs
src/infrastructure/persistence/: json_voice_store.rs  mod.rs
src/infrastructure/tts/: aivoice.rs  http.rs  mod.rs  tsubaki.rs  voicevox.rs
(+4 files in other folders)
