[package]
name = "yomiage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
dashmap = "6.2.1"
once_cell = "1.21.4"
regex = "1.12.3"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls", "http2", "charset", "query"] }
rustls = "0.23.40"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serenity = { version = "0.12.5", features = ["voice"] }
songbird = { version = "0.6.0", features = ["builtin-queue"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
